# F3ToyModel

./: meson.build  pyproject.toml  setup_old.py
Modules/: Calculator.py  __init__.py
